...
                    fontSize = 18.sp,
                    modifier = Modifier.align(Alignment.CenterVertically).padding(space)
                )
                TextField(value = limit.value.toString(),
                    onValueChange = { limit.value = if (it.length == 0) 0 else it.toInt() },
                    textStyle = TextStyle(fontSize = 20.sp),
                    modifier = Modifier.padding(space).width(96.dp).testTag("Settings-Limit"),
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number)
                )
            }

            Row(horizontalArrangement = Arrangement.Start,
                modifier = Modifier.fillMaxWidth(1f)
...
                    fontSize = 18.sp,
                    modifier = Modifier.align(Alignment.CenterVertically).padding(space)
                )
                TextField(value = filter.value,
                    onValueChange = { filter.value = it },
                    textStyle = TextStyle(fontSize = 20.sp),
                    modifier = Modifier.padding(space).testTag("Settings-Filter")
                )
            }

            Row(horizontalArrangement = Arrangement.End,
                modifier = Modifier.fillMaxWidth(1f)
            ) {
...
