...
            LazyColumn(
                horizontalAlignment = Alignment.Start,
                verticalArrangement = Arrangement.Top,
                modifier = Modifier
                    .fillMaxHeight(0.93f)
                    .padding(dimensionResource(id = R.dimen.list_padding))
                    .testTag("ViewList-LazyColumn")
            ) {
                items(ilist.size, { ilist[it].id } ) { index ->
                    ItemLine(ilist[index], { onClick(ilist[index].id) })
                }
            }

...
