...
                    .padding(dimensionResource(id = R.dimen.list_padding))
            ) {
                Image(
                    bitmap = bitmap.value ?: ImageBitmap.Companion.imageResource(id = R.drawable.map800),
                    contentDescription = "",
                    contentScale = ContentScale.Fit,
                    modifier = Modifier.testTag("ViewMap-Image")
                )
            }

            Row(horizontalArrangement = Arrangement.End,
                modifier = Modifier.fillMaxWidth(1f)
            ) {
...
